--- a/app/src/main/res/layout/activity_speaker_register.xml
+++ b/app/src/main/res/layout/activity_speaker_register.xml
@@ -16,14 +16,14 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView_title"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:text="Title" />
 
         <TextView
-            android:text="TextView"
+            android:text="00000000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView_password"
@@ -31,11 +31,17 @@
             android:textAlignment="center" />
 
         <TextView
-            android:text="TextView"
+            android:text="提示"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView_tips"
             android:textAlignment="center"
             android:textSize="24sp" />
+
+        <Button
+            android:text="开始声纹认证"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_start" />
     </LinearLayout>
 </RelativeLayout>
